--- a/package.json
+++ b/package.json
@@ -35,11 +35,12 @@
     "build/**/*.{js,d.ts,map,json}"
   ],
   "scripts": {
-    "build": "tsc -p tsconfig.build.json",
+    "build": "tsc -p tsconfig.build.json && npm run copy-js-files",
     "watch": "npm run build -- --watch",
     "prepare": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "docs": "docsify serve docs"
+    "copy-js-files": "cp -R ./src/lib/Dialogs ./build/lib"
   },
   "dependencies": {
     "@iobroker/socket-client": "1.0.8"
